# Tutorial-Caipyra-2026

./: Descubra emoções em textos com NLP, LLM’s e ML.pptx  README.md
Codigo/: a  dialogo_friends_20000.csv  main.py  pyproject.toml
