[project]
name = "codigo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "deep-translator>=1.11.4",
    "langdetect>=1.0.9",
    "matplotlib>=3.9.4",
    "nltk>=3.9.2",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.11",
    "textblob>=0.19.0",
    "tqdm>=4.67.3",
    "transformers>=4.57.6",
    "wordcloud>=1.9.6",
]
